--- a/smart-sauce-station.html
+++ b/smart-sauce-station.html
@@ -95,7 +95,7 @@
           </div>
 
           
-            <div class="portfolio-info col-lg-4">
+            <div class="portfolio-info col-lg-4" style="background: #fff">
               <h3>More information</h3>
               <ul>
                 <li><strong>Size</strong>: 2500mm 750mm*1040mm</li>
