--- a/vertical-open-air-cooler.html
+++ b/vertical-open-air-cooler.html
@@ -63,18 +63,18 @@
     
     <section class="main-image">
       <div class="row">
-        <img src="assets/img/portfolio-details/mega-image-2.jpg" style="height: 400px;" alt="">
+        <img src="assets/img/portfolio-details/mega-image-2.jpg" style="height: 400px;">
         <h2>Vertical Open Air Cooler Composition</h2>
       </div>
     </section>
 
     <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
+    <section id="portfolio-details" class="portfolio-details section-bg">
       <div class="container">
 
         <div class="row">
 
-          <div class="col-lg-12">
+          <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
