--- a/glass-door-refrigeration.html
+++ b/glass-door-refrigeration.html
@@ -257,29 +257,25 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
+    
+    <div class="container d-md-flex py-4">
 
-    <div class="footer-top">
-
-      <div class="container">
-
-        <div class="row  justify-content-center">
-          <div class="col-lg-7">
-            <a href="index.html"><img src="assets/img/logo.jpg" alt="" class="img-fluid"></a>
-            <p>Follow us on our Social media pages:</p>
-          </div>
-        </div>
-
-        <div class="social-links">
-          <a href="https://www.facebook.com/profile.php?id=61560821978481" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/lihaisheng24?igsh=cjZubGo4OW1qc2E%3D&utm_source=qr" class="instagram"><i class="bx bxl-instagram"></i></a>
-        </div>
-
+      <div class="logo-footer">
+        <a href="index.html"><img src="assets/img/logo.jpg" style="display: block; margin-left: auto; margin-right: auto;" width="200px" alt="" class="img-fluid"></a>
       </div>
-    </div>
 
-    <div class="container footer-bottom clearfix">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Yordeely</span></strong>. All Rights Reserved
+      <div class="me-md-auto text-center text-md-start">
+        <div class="copyright" style="margin: 10px;">
+          &copy; Copyright <strong><span>Yordeely</span></strong>. All Rights Reserved
+        </div>
+      </div>
+      <div class="d-flex justify-content-center">
+        <p style="margin-top: 10px; margin-right: 20px;">Follow us on Social Media:</p>
+      </div>
+      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+        <a href="https://www.facebook.com/profile.php?id=61560821978481" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/lihaisheng24?igsh=cjZubGo4OW1qc2E%3D&utm_source=qr" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.tiktok.com/@zenia281" class="tiktok"><i class="bx bxl-tiktok"></i></a>
       </div>
     </div>
   </footer>
