--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             <div class="info mt-4">
               <i class="bi bi-envelope"></i>
               <h4>Email id:</h4>
-              <p>haishengli@gmail.com / zengchuijiao@gmail.com</p>
+              <p>haishengli@gmail.com / zengchuijiao@gmail.com / yordeely@gmail.com</p>
             </div>
             <div class="row">
               <div class="col-lg-6 mt-4">
@@ -423,7 +423,7 @@
               </div>
             </div>
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4" data-netlify="true" netlify>
               <div class="form-group mt-3" style="margin-bottom: 10px;">
                 <input type="text" class="form-control" name="subject" id="name" placeholder="Your Name" required>
               </div>
@@ -476,7 +476,7 @@
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="https://www.facebook.com/profile.php?id=61560821978481" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/lihaisheng24?igsh=cjZubGo4OW1qc2E%3D&utm_source=qr" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.tiktok.com/@zenia281" class="tiktok"><i class="bx bxl-tiktok"></i></a>
+        <a href="https://www.tiktok.com/@yordeely?is_from_webapp=1&sender_device=pc" class="tiktok"><i class="bx bxl-tiktok"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
