--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
               </div>
             </div>
 
-            <form name="contact" method="post" role="form" class="php-email-form mt-4" data-netlify="true" netlify>
+            <form name="contact" action="form" method="post" role="form" class="php-email-form mt-4" data-netlify="true" netlify>
               <div class="form-group mt-3" style="margin-bottom: 10px;">
                 <input type="text" class="form-control" name="subject" id="name" placeholder="Your Name" required>
               </div>
