--- a/index.html
+++ b/index.html
@@ -423,31 +423,23 @@
               </div>
             </div>
 
-            <form name="contact" action="form" method="POST" role="form" class="php-email-form mt-4" data-netlify="true" netlify>
-              <div class="form-group mt-3" style="margin-bottom: 10px;">
-                <input type="text" class="form-control" name="subject" id="name" placeholder="Your Name" required>
-              </div>
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="phone number" class="form-control" name="phone number" id="phone number" placeholder="Your Phone Number" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-                <div class="error-message"></div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+            <div id="form" class="col-lg-12 mt-5 mt-lg-0 d-flex align-items-stretch" style="padding-top: 30px;">
+              <form action="form" class="php-email-form" name="Contact" method="POST" data-netlify="true" netlify>
+                <label for="name">Your Name</label>
+                <input type="text" name="name" class="form-control" id="name" required>
+                <label for="email">Your Email</label>
+                <input type="email" class="form-control" name="email" id="email" required>
+                <label for="phone number">Your Phone Number</label>
+                <input type="tel" class="form-control" name="phone" id="phone" required>                  
+                <label for="name">Message</label>
+                <textarea class="form-control" name="message" rows="8" required></textarea>
+                <p id="thank-you-message">
+                  Thank you for contacting us. We will be in touch with you very soon.
+                </p>
+                <div class="text-center" style="margin-top: 10px;"><button type="submit">Send Message</button></div>
+              </form>
+            </div>
+
           </div>
         </div>
 
