--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
             </div>
 
             <div id="form" class="col-lg-12 mt-5 mt-lg-0 d-flex align-items-stretch" style="padding-top: 30px;">
-              <form action="form" class="php-email-form" name="Contact" method="POST" data-netlify="true" netlify>
+              <form action="form" class="php-email-form" name="Contact-form" method="POST" data-netlify="true" netlify>
                 <label for="name">Your Name</label>
                 <input type="text" name="name" class="form-control" id="name" required>
                 <label for="email">Your Email</label>
