--- a/index.html
+++ b/index.html
@@ -433,9 +433,11 @@
                 <input type="tel" class="form-control" name="phone" id="phone" required>                  
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="8" required></textarea>
-                <p id="thank-you-message">
-                  Thank you for contacting us. We will be in touch with you very soon.
-                </p>
+                <div class="my-3">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                </div>
                 <div class="text-center" style="margin-top: 10px;"><button type="submit">Send Message</button></div>
               </form>
             </div>
