--- a/index.html
+++ b/index.html
@@ -386,67 +386,71 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-      <div class="container">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Contact</h2>
+          <p>Get Fit With Nikita is offering workout routines, nutrition advice, and expert guidance. Contact now to help you achieve your fitness goals.</p>
+        </div>
+
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
-            <div class="section-title">
-              <h2 style="text-align: left;">Contact</h2>
-              <p>Reach Out to Us for Tailored Culinary Solutions and Support.</p>
+
+          <div class="col-lg-5 d-flex align-items-stretch">
+            <div class="info">
+              <div class="address">
+                <i class="bi bi-geo-alt"></i>
+                <h4>Location:</h4>
+                <p>SCO 2 First Floor, Naval Market, Sunny Enclave, Mohali, Punjab 140301</p>
+              </div>
+
+              <div class="email">
+                <i class="bi bi-envelope"></i>
+                <h4>Email:</h4>
+                <p>support@getfitwithnikita.com</p>
+              </div>
+
+              <div class="phone">
+                <i class="bi bi-phone"></i>
+                <h4>Call:</h4>
+                <p>+91 9988777115</p>
+              </div>
+
+              <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:300px;"><div id="my-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Sunny+Enclave,+Kharar,+Mohali,+Punjab,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embedded-map-code" rel="nofollow" href="https://www.bootstrapskins.com/themes" id="grab-maps-authorization">premium bootstrap themes</a><style>#my-map-canvas img{max-height:none;max-width:none!important;background:none!important;}</style></div>
             </div>
+
           </div>
 
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
-            <div class="info mt-4">
-              <i class="bi bi-geo-alt"></i>
-              <h4>Location:</h4>
-              <p>Building 2, GuoyuanPort National Logistics Hub,<br> Liangjiang New Area, Chongqing, China</p>
-            </div>
-            <div class="info mt-4">
-              <i class="bi bi-envelope"></i>
-              <h4>Email id:</h4>
-              <p>haishengli@gmail.com / zengchuijiao@gmail.com / yordeely@gmail.com</p>
-            </div>
-            <div class="row">
-              <div class="col-lg-6 mt-4">
-                <div class="info">
-                  <i class="bi bi-phone"></i>
-                  <h4>Call / Whatsapp:</h4>
-                  <p>+86 183 8231 4561</p>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="info w-100 mt-4">
-                  <i class="bi bi-wechat"></i>
-                  <h4>Wechat:</h4>
-                  <p>+83 183 7566 8525</p>
-                </div>
-              </div>
-            </div>
-
-            <div id="form" class="col-lg-12 mt-5 mt-lg-0 d-flex align-items-stretch" style="padding-top: 30px;">
-              <form action="form" class="php-email-form" name="Contact-form" method="POST" data-netlify="true" netlify>
-                <label for="name">Your Name</label>
-                <input type="text" name="name" class="form-control" id="name" required>
-                <label for="email">Your Email</label>
-                <input type="email" class="form-control" name="email" id="email" required>
-                <label for="phone number">Your Phone Number</label>
-                <input type="tel" class="form-control" name="phone" id="phone" required>                  
+          <div id="form" class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form action="form" class="php-email-form" name="contact-form" method="POST" data-netlify="true" netlify>
+                  <label for="name">Your Name</label>
+                  <input type="text" name="name" class="form-control" id="name" required>
+                  <label for="name">Your Email</label>
+                  <input type="email" class="form-control" name="email" id="email" required>
+                  <label for="name">Your Phone Number</label>
+                  <input type="tel" class="form-control" name="phone" id="phone" required>                  
+                  <label for="name">Select Package (as query)</label><br>
+                <select class="tab" id="cars" name="Package" id="subject" required>
+                  <option value="Trial Package">Trial Package</option>
+                  <option value="Basic Package">Basic Package</option>
+                  <option value="Advance Package">Advance Package</option>
+                  <option value="Body Reshape Package">Body Reshape Package</option>
+                  <option value="Couple Transformation Package">Couple Transformation Package</option>
+                  <option value="Kids Nutrition Package">Kids Nutrition Package</option>
+                </select>
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="8" required></textarea>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-                <div class="text-center" style="margin-top: 10px;"><button type="submit">Send Message</button></div>
-              </form>
-            </div>
-
+                <p id="thank-you-message">
+                  Thank you for contacting us. We will be in touch with you very soon.
+                </p>
+              <div class="text-center"><button type="submit">Send Message</button></div>
+            </form>
           </div>
+
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>
+    <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
