--- a/index.html
+++ b/index.html
@@ -439,9 +439,10 @@
                 </select>
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="8" required></textarea>
-                <p id="thank-you-message">
-                  Thank you for contacting us. We will be in touch with you very soon.
-                </p>
+                <div class="my-3">
+                  <div class="loading">Loading</div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
