--- a/index.html
+++ b/index.html
@@ -385,71 +385,89 @@
     </section><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
+    <section id="contact" class="contact section">
 
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p>Get Fit With Nikita is offering workout routines, nutrition advice, and expert guidance. Contact now to help you achieve your fitness goals.</p>
-        </div>
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Contact</h2>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+      </div><!-- End Section Title -->
 
-        <div class="row">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>SCO 2 First Floor, Naval Market, Sunny Enclave, Mohali, Punjab 140301</p>
-              </div>
+        <div class="row gy-4">
 
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>support@getfitwithnikita.com</p>
-              </div>
+          <div class="col-lg-5">
 
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+91 9988777115</p>
-              </div>
-
-              <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:300px;"><div id="my-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Sunny+Enclave,+Kharar,+Mohali,+Punjab,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embedded-map-code" rel="nofollow" href="https://www.bootstrapskins.com/themes" id="grab-maps-authorization">premium bootstrap themes</a><style>#my-map-canvas img{max-height:none;max-width:none!important;background:none!important;}</style></div>
-            </div>
-
-          </div>
-
-          <div id="form" class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="form" class="php-email-form" name="contact-form" method="POST" data-netlify="true" netlify>
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                  <label for="name">Your Phone Number</label>
-                  <input type="tel" class="form-control" name="phone" id="phone" required>                  
-                  <label for="name">Select Package (as query)</label><br>
-                <select class="tab" id="cars" name="Package" id="subject" required>
-                  <option value="Trial Package">Trial Package</option>
-                  <option value="Basic Package">Basic Package</option>
-                  <option value="Advance Package">Advance Package</option>
-                  <option value="Body Reshape Package">Body Reshape Package</option>
-                  <option value="Couple Transformation Package">Couple Transformation Package</option>
-                  <option value="Kids Nutrition Package">Kids Nutrition Package</option>
-                </select>
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="8" required></textarea>
-                <div class="my-3">
-                  
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+            <div class="info-wrap">
+              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+                <i class="bi bi-geo-alt flex-shrink-0"></i>
+                <div>
+                  <h3>Address</h3>
+                  <p>A108 Adam Street, New York, NY 535022</p>
                 </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+              </div><!-- End Info Item -->
+
+              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+                <i class="bi bi-telephone flex-shrink-0"></i>
+                <div>
+                  <h3>Call Us</h3>
+                  <p>+1 5589 55488 55</p>
+                </div>
+              </div><!-- End Info Item -->
+
+              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+                <i class="bi bi-envelope flex-shrink-0"></i>
+                <div>
+                  <h3>Email Us</h3>
+                  <p>info@example.com</p>
+                </div>
+              </div><!-- End Info Item -->
+
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
           </div>
+
+          <div class="col-lg-7">
+            <form action="form" name="contact" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200" data-netlify="true" netlify>
+              <div class="row gy-4">
+
+                <div class="col-md-6">
+                  <label for="name-field" class="pb-2">Your Name</label>
+                  <input type="text" name="name" id="name-field" class="form-control" required="">
+                </div>
+
+                <div class="col-md-6">
+                  <label for="email-field" class="pb-2">Your Email</label>
+                  <input type="email" class="form-control" name="email" id="email-field" required="">
+                </div>
+
+                <div class="col-md-12">
+                  <label for="subject-field" class="pb-2">Subject</label>
+                  <input type="text" class="form-control" name="subject" id="subject-field" required="">
+                </div>
+
+                <div class="col-md-12">
+                  <label for="message-field" class="pb-2">Message</label>
+                  <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
+                </div>
+
+                <div class="col-md-12 text-center">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
+
+                  <button type="submit">Send Message</button>
+                </div>
+
+              </div>
+            </form>
+          </div><!-- End Contact Form -->
 
         </div>
 
       </div>
+
     </section>
     <!-- End Contact Section -->
 
