--- a/index.html
+++ b/index.html
@@ -423,8 +423,7 @@
               </div>
             </div>
 
-            <form action="https://api.web3forms.com/submit" method="POST" role="form" class="php-email-form mt-4">
-              <input type="hidden" name="access_key" value="b56f0dbf-47c4-482f-9109-67bf2e0b0255">
+            <form onsubmit="EmailSend(); reset(); return false;" class="php-email-form mt-4">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -442,11 +441,24 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
-              <div class="my-3">
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
+            <script>
+              function EmailSend(){
+                Email.send({
+                SecureToken : "2176b9a8-fbfd-4f5e-92ec-410b8406123b",
+                To : 'htalwar2308@gmail.com',
+                From : "yordeely forms",
+                Subject : document.getElementById("subject").value,
+                Body : "Name: "+ document.getElementById("name").value + 
+                       "<br> Phone Number: "+ document.getElementById("phone-number").value +
+                       "<br> Email: "+ document.getElementById("email").value +
+                       "<br> message: "+ document.getElementById("message").value
+                }).then(
+                  message => alert("Form Submitted Succesfully")
+                );
+              }
+            </script>
           </div>
         </div>
 
@@ -491,6 +503,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
