--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
               </div>
             </div>
 
-            <form onsubmit="EmailSend(); reset(); return false;" class="php-email-form mt-4">
+            <form action="https://formsubmit.co/htalwar2308@gmail.com" method="POST" class="php-email-form mt-4">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -443,22 +443,6 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-            <script>
-              function EmailSend(){
-                Email.send({
-                SecureToken : "2176b9a8-fbfd-4f5e-92ec-410b8406123b",
-                To : 'htalwar2308@gmail.com',
-                From : "yordeely forms",
-                Subject : document.getElementById("subject").value,
-                Body : "Name: "+ document.getElementById("name").value + 
-                       "<br> Phone Number: "+ document.getElementById("phone-number").value +
-                       "<br> Email: "+ document.getElementById("email").value +
-                       "<br> message: "+ document.getElementById("message").value
-                }).then(
-                  message => alert("Form Submitted Succesfully")
-                );
-              }
-            </script>
           </div>
         </div>
 
@@ -503,7 +487,6 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
