--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
               </div>
             </div>
 
-            <form action="https://formsubmit.co/htalwar2308@gmail.com" method="POST" class="php-email-form mt-4">
+            <form onsubmit="reset();" action="https://formsubmit.co/htalwar2308@gmail.com" method="POST" class="php-email-form mt-4">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -441,11 +441,7 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
+              
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
