--- a/index.html
+++ b/index.html
@@ -441,11 +441,7 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
+              <input type="hidden" name="_captcha" value="false">
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
