--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
             </div>
           </div>
       </div>
+      <div class="container" style="margin-top: 40px;">
+        <div class="container section-title" data-aos="fade-up">
+          <h2 style="text-align: left; margin-left: -10px;">Our Products are in these many Countries</h2>
+        </div>
+        <div class="image">
+          <img src="assets/img/map.jpg" alt="" class="img-fluid">
+        </div>
+      </div>
     </section><!-- End Why Us Section -->
 
     <!-- ======= Services Section ======= -->
@@ -205,6 +213,15 @@
                   </div>
                   <div class="swiper-slide">
                     <img src="assets/img/services/2.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="assets/img/services/3.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="assets/img/services/4.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="assets/img/services/5.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
                 <div class="swiper-pagination" style="margin-top: 20px; position: relative;"></div>
@@ -423,7 +440,8 @@
               </div>
             </div>
 
-            <form action="form" name="con" method="POST" class="php-email-form mt-4" data-netlify="true" netlify>
+            <form action="https://api.web3forms.com/submit" name="con" method="POST" class="php-email-form mt-4">
+              <input type="hidden" name="access_key" value="b56f0dbf-47c4-482f-9109-67bf2e0b0255">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
