--- a/vertical-open-air-cooler.html
+++ b/vertical-open-air-cooler.html
@@ -63,7 +63,7 @@
     
     <section class="main-image">
       <div class="row">
-        <img src="assets/img/portfolio-details/mega-image-2.jpg" style="height: 600px;">
+        <img src="assets/img/portfolio-details/mega-image-2.jpg" style="height: auto; width: auto;">
         <h2>Vertical Open Air Cooler Composition</h2>
       </div>
     </section>
